fixed main nav scroll overflow bar

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ h1,h2,h3,h4,h5,h6{
     text-transform: uppercase;
 }
 
+.black{
+    background-color: var(--dark);
+}
 /* base structure  */
 
 .wrapper{
@@ -108,6 +111,7 @@ main{
     display:flex;
     flex-flow: column nowrap;
     justify-content: space-between;
+    overflow:hidden;
     width: 230px;
     min-height: 480px;
     background-color: var(--dark);
@@ -312,6 +316,10 @@ nav.main-nav div.container:last-child{
     border-radius: 50%;
 }
 
+.main-nav section#mobile-hide{
+    height:70%;
+    overflow-y:auto;
+}
 
 /* playbar section */
 
